[internal] initial split of data and metadata